--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "axios": "^1.12.2",
     "jsmediatags": "^3.9.7",
     "music-metadata-browser": "^2.5.11",
     "react": "^19.1.0",
